adding API for fail over install